<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/feature_dialog_back"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/event_popup_complete"
    android:orientation="vertical" 
    android:gravity="center_horizontal"
    android:layout_marginLeft="@dimen/feature_dialog_back_marginleft"
    android:layout_marginRight="@dimen/feature_dialog_back_marginright"
    android:weightSum="1"
    >

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/feature_dialog_title_marginTop"
        android:gravity="center_horizontal"
        android:text="@string/feature_dialog_title"
        android:textColor="#ffffff"
        android:textSize="@dimen/feature_event_dialog_title_size" />

    <TextView
        android:id="@+id/integral"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:gravity="center_horizontal"
        android:text="@string/feature_dialog_intergal"
        android:textColor="#ffffff"
        android:textSize="@dimen/feature_event_dialog_integral_size" />

    <TextView
        android:id="@+id/introduce"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:paddingTop="@dimen/feature_event_dialog_introduce_paddingTop"
        android:paddingBottom="@dimen/feature_event_dialog_introduce_paddingBottom"
        android:paddingLeft="@dimen/feature_event_dialog_introduce_paddingLeft"
        android:paddingRight="@dimen/feature_event_dialog_introduce_paddingRight"
        android:text="@string/feature_dialog_introduce"  
        android:textColor="#536f03"
        android:textSize="@dimen/feature_event_dialog_introduce_size" />

   
    <Button
        android:id="@+id/know"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/fight_dialog_btn_range"
        android:layout_marginBottom="@dimen/feature_event_dialog_know_marginBottom"
        android:background="@drawable/tips_iknow"
        android:gravity="center"
        android:text="@string/feature_dialog_konwn"
        android:textColor="#ffffff"
        android:textSize="@dimen/feature_event_dialog_introduce_size" />
</LinearLayout>