<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/soushang_bg"
    android:orientation="vertical"
    android:paddingLeft="24dp"
    android:paddingRight="24dp" >

    <TextView
        android:id="@+id/soushang_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:background="@drawable/soushang_title"
        android:gravity="center"
        android:paddingBottom="4dp"
        android:shadowColor="#082d00"
        android:shadowDx="0"
        android:shadowDy="1"
        android:text="@string/soushang_title"
        android:textColor="#fdfcc4"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/soushang"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/soushang_title"
        android:text="@string/soushang"
        android:textColor="#536f03"
        android:textSize="@dimen/soushang_size" />

    <TextView
        android:id="@+id/soushang_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/soushang"
        android:lineSpacingExtra="2dp"
        android:paddingTop="8dp"
        android:text="@string/soushang_content"
        android:textColor="#536f03"
        android:textSize="@dimen/soushang_content_size" />

</RelativeLayout>